Squashed commit of the following:
commit 81fcb621e77e73f0b090c268403c368f6fc85f1a
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 16:47:46 2019 +0200

    Bump version.

commit 65c689340e0ad4b5ff074e7dd7181ea162e0b798
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 16:30:09 2019 +0200

    Exclude *.pyc from distribution.

commit d74ccbbe2ba32e2d14b1d06d718288d43fd9c3cc
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 15:59:13 2019 +0200

    Fix dependencies.

commit ca65e940aaa676b45bb5b87fd85456c36dfb469b
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 15:53:38 2019 +0200

    Fix readme markup.

commit 38a3d38fba5e743402a64e43f50f760fd98456f9
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 15:48:39 2019 +0200

    Fix readme markup, add keywords.

commit ab3e13a0c17b2a80d2daab7f6d59517d10a84e1a
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 15:31:55 2019 +0200

    Add package description.

commit 901e536d9bd79fc3a7853163cb930fd68d23c7be
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 12:53:13 2019 +0200

    Add app description, fix items workflow.

commit 7201cdb5295a0f56d4866699fd018751d01c8b08
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Thu Jan 10 00:23:47 2019 +0200

    Remove unnecessary scripts from subviews, add reloadExcept function.

commit d9880b9e4fd2a9b902ad4250699509fba452f4b0
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Wed Jan 9 23:54:01 2019 +0200

    Add subview reload.

commit 2263c32248d8637a80b054c45fc46e98462c837e
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Fri Jan 4 19:35:53 2019 +0200

    Fix bulk actions.

commit ea8a415dae4d1259995827168b7cb9bf09c99dd3
Author: Artem Shelest <artem.e.shelest@gmail.com>
Date:   Fri Jan 4 18:48:04 2019 +0200

    Somplify index page, add Bootstrap2 warning.

commit ab9b173a8463e4c4a397596aec58e3c06e16cffa
Author: Artem

--- a/src/flask_admin_subview/templates/bootstrap3/admin/subview/list.html
+++ b/src/flask_admin_subview/templates/bootstrap3/admin/subview/list.html
@@ -33,7 +33,7 @@
 
         {% if actions %}
             <li class="dropdown">
-                {{ actionlib.dropdown(actions) }}
+                {{ subview_actionlib.dropdown(actions) }}
             </li>
         {% endif %}
 
@@ -154,35 +154,7 @@
 {% endblock %}
 
 {% block tail %}
-    {{ lib.form_js() }}
-    {{ actionlib.script(_gettext('Please select at least one record.'),
+    {{ subview_actionlib.script(_gettext('Please select at least one record.'),
                         actions,
                         actions_confirmation) }}
-
-
-    <script language="javascript">
-        (function ($) {
-            $('[data-role=tooltip]').tooltip({
-                html: true,
-                placement: 'bottom'
-            });
-        })(jQuery);
-
-        // Catch exception when closing dialog with <esc> key
-        // and prevent accidental deletions.
-        function safeConfirm(msg) {
-            try {
-                var isconfirmed = confirm(msg);
-                if (isconfirmed == true) {
-                    return true;
-                }
-                else {
-                    return false;
-                }
-            }
-            catch (err) {
-                return false;
-            }
-        }
-    </script>
 {% endblock %}
